# sway-workspace-manager

./: Cargo.toml  README.md
src/: command.rs  lib.rs  main.rs  workspaces.rs
