[package]
license = "GPL-3.0-or-later"
name = "sway-workspace-manager"
description = "A dynamic workspace manager for sway"
repository = "https://github.com/oati/sway-workspace-manager"
version = "0.2.0"
edition = "2021"

[dependencies]
swayipc = "3.0.0"

[package.metadata.nix]
build = true
toolchain = "nightly"
